# JSOS

./: .gitignore  AUTHORS  Cargo.toml  LICENSE  README.md  build.rs  make_iso.ps1  make_iso.sh  run_qemu.ps1  run_qemu.sh  run_uefi.sh  runner.py  x86_64-os.json
.cargo/: config.toml
docs/: API.md  ARCHITECTURE.md  REAL_HARDWARE.md  image-decoding-design.md  impl-plan.md
docs/superpowers/plans/: 2026-04-04-canvas2d.md  2026-04-05-demo-browser-v2.md  2026-04-05-e1000e-nic-driver.md  2026-04-05-protocols-crate.md
docs/superpowers/specs/: 2026-04-04-canvas2d-design.md  2026-04-05-demo-browser-v2-design.md  (+2 more)
embedded-tls/: .cargo_vcs_info.json
embedded-tls/src/: config.rs  parse_buffer.rs
protocols/: Cargo.toml
protocols/src/: ftp.rs  lib.rs  sftp.rs  tftp.rs
quickjs/: cutils.h  freestanding.c  setjmp.S
quickjs/include/: alloca.h  assert.h  ctype.h  errno.h  fenv.h  intrin.h  inttypes.h  limits.h  math.h  setjmp.h  signal.h  stdarg.h  stdio.h  stdlib.h  string.h  time.h
src/: allocator.rs  ata.rs  canvas.rs  framebuffer.rs  gdt.rs  graphics.rs  image.rs  interrupts.rs  iommu.rs  js_runtime.rs  keyboard.rs  lib.rs  main.rs  memory.rs  mouse.rs  pci.rs  power.rs  process.rs  serial.rs  shell.rs  sse.rs  storage.rs  sysinfo.rs  xhci.rs
src/bindings/: mod.rs
src/fs/: mod.rs  ramfs.rs  store.rs
src/js/: buffer.js  css.js  dom.js  events.js  globals_compat.js  globals_console_url.js  globals_date.js  globals_encoding.js  globals_storage.js  globals_websocket.js  layout.js  libjsos.js  paint.js  pxe.js  test_features.js  test_polyfills.js
src/jsos/: calculator.jsos  canvastest.jsos  demo_browser.jsos  demo_browser_v2.jsos  drawtest.jsos  fontdemo.jsos  imageview.jsos  node.jsos  pixeldemo.jsos  pxetool.jsos  seriallog.jsos  shell.jsos  snake.jsos  stress_test.jsos  sysman.jsos  webremote.jsos  winman.jsos
src/net/: e1000e.rs  ftp_job.rs  mod.rs  nic.rs  rtl8139.rs  tftp_job.rs  tls.rs
tests/: basic_boot.rs  js_tests.rs  process_tests.rs  store_tests.rs
x86_64/: Cargo.toml
(+6 files in other folders)
