[workspace]
members = [
    ".",
]

[package]
name = "os"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Loni Karmon <loni.123.102@gmail.com>"]

[package.metadata.bootloader]
minimum-framebuffer-height = 720
minimum-framebuffer-width = 1280
map-physical-memory = true
kernel-stack-size = 1048576

[dependencies]
bootloader = "0.10.13"
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "log", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp", "socket-dhcpv4", "socket-dns"] }
u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
embedded-graphics = "0.8.1"
linked_list_allocator = "0.10.5"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10.0"
uart_16550 = "0.3.0"
x86_64 = { version = "0.14.99", features = ["instructions"] }
libm = "0.2.16"
embedded-tls = { version = "0.17.0", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3.1", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
sha2 = { version = "0.10", default-features = false }
aes = { version = "0.8", default-features = false }
hmac = { version = "0.12", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
embedded-io-async = { version = "0.6.1", default-features = false }

zune-png = { version = "0.4.0", default-features = false }
zune-jpeg = { version = "0.4", default-features = false }
tinybmp = { version = "0.6", default-features = false }

[build-dependencies]
cc = "1"

[profile.dev]
panic = "abort"
opt-level = 2
debug = false

[profile.release]
panic = "abort"
opt-level = 2

[profile.test]
panic = "abort"

[lib]
test = false
doctest = false

[[bin]]
name = "os"
test = false
[patch.crates-io]
x86_64 = { path = "x86_64" }
embedded-tls = { path = "embedded-tls" }
